# SBSAT

./: .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  SConstruct  THANKS  aclocal.m4  compile.patch  compile.patch.all.sh  compile.patch.sh  confdefs.h  config.h  config.h.in  configure  configure.ac  configure.in  cvs2cl.pl  filesusedtobuildSBSAT.txt  libtool  mkinstalldirs  ylwrap
doc/man1/: Makefile.am  Makefile.in  sbsat.1
include/: Makefile.am  Makefile.in  bdd_ite.h  bddnode.h  bddtable.h  brancher.h  common.h  config.h  config.h.in  cuddObj.hh  defines.h  equivclass.h  flatten.h  formats.h  globals.h  heuristic.h  i_heuristic.h  integerset.h  interface.h  ite.h  itefeatures.h  iteheaders.h  j_heuristic.h  l_heuristic.h  lemmainfo.h  literalset.h  log.h  params.h  parse.h  pools.h  postproc.h  preprocess.h  prototypes.h  queue.h  sat_server_ServerImpl.h  sbsat.h  sbsat_features.h  sbsat_formats.h  sbsat_headers.h  sbsat_interface.h  (+10 more)
src/: Makefile.am  Makefile.in  README  emptylib.cc  ite.cc  sbsat.cc
src/cudd/: Makefile.am  Makefile.in
src/cudd/cppobj/: Makefile.am  Makefile.in  cuddObj.cc
src/cudd/cudd/: Makefile.am  Makefile.in  cuddAPI.c  cuddAddApply.c  cuddAddNeg.c  cuddAddWalsh.c  cuddApa.c  cuddApprox.c  cuddBridge.c  cuddCache.c  cuddCheck.c  cuddEssent.c  cuddExact.c  cuddExport.c  cuddGroup.c  cuddInit.c  cuddInt.h.gch  cuddLCache.c  cuddLevelQ.c  cuddLinear.c  cuddPriority.c  cuddRef.c  cuddReorder.c  cuddSat.c  cuddSign.c  cuddSubsetHB.c  cuddSubsetSP.c  cuddSymmetry.c  cuddTable.c  cuddUtil.c  cuddWindow.c  cuddZddFuncs.c  cuddZddGroup.c  cuddZddIsop.c  cuddZddMisc.c  cuddZddUtil.c
src/cudd/epd/: Makefile.am  Makefile.in
src/cudd/include/: Makefile.am  Makefile.in  cudd.h  (+3 more)
src/formats/: Makefile.am  Makefile.in  README  aiger.c  autochk.cc  bdd2aag.cc  bdd2cnf.cc  bddbinary.cc  cnf.cc  flatten.cc  iteformat.cc  markbdd.cc  parse.cc  read_input.cc  read_result.cc  sat.cc  smurf.cc  smurf_fpga.cc  tracer.cc  write_output.cc  xorbdd.cc  yices.cc  yices_lexer.hpp
src/generator/: Makefile.am  Makefile.in  add_tree.cc  gentest.cc  rand_bdd.cc  rksat.cc  rksat.py  rn.cc  slider2.cc  slider2.py  slider3_base.py  slider4.py  testite.sh  trans.cc  vanDerWaerden.cc  vdwtest.sh  xorgen.cc
src/postproc/: Makefile.am  Makefile.in  backend.cc
src/preproc/: Makefile.am  Makefile.in  create_infs.cc  do_applyinfs.cc  do_clearft.cc  do_cofactor.cc  do_depcluster.cc  do_diameter.cc  do_ex_safe_cluster.cc  do_exquantify.cc  do_exquantifyand.cc  do_extendres.cc  do_findft.cc  do_flow.cc  do_identify_same_structure.cc  do_message_passing.cc  do_possibleanding.cc  do_prover3.cc  do_pruning.cc  do_pruning_1.cc  do_pruning_2.cc  do_pruning_pr.cc  do_pruning_restrict.cc  do_rewind.cc  do_safeassign.cc  do_safesearch.cc  do_simpleand.cc  do_split.cc  do_steal.cc  do_strength.cc  equivclass.cc  init_preproc.cc  other_preproc.cc  preprocess.cc
src/solv_bddwalk/: Makefile.am  Makefile.in  bddwalk.cc
src/solv_dac/: Makefile.am  Makefile.in  dac.cc
src/solv_simple/: Makefile.am  Makefile.in  display.cc  hooks.cc  restarts.cc  solv_simple.cc  solv_simple_init.cc  solve_simple.cc  vars_map.cc
src/solv_smurf/: Makefile.am  Makefile.in  README  br_afs.cc  br_backtrack.cc  br_backtrack_nl.cc  br_backtrack_sbj.cc  br_brancher.cc  br_checks.cc  br_init.cc  br_select_bp.cc  display.cc  display_sf.cc  fn_create.cc  fn_init.cc  fn_stack.cc  fn_update.cc  hr_choice.cc  solver.cc  vars_hints.cc  vars_inferlit.cc  vars_init.cc  vars_initinfs.cc  vars_map.cc  vars_recordsol.cc  vars_verify.cc
src/solv_wvf/: Makefile.am  Makefile.in  wvf.cc
src/solver/: Makefile.am  Makefile.in  autarky.cc  backtrack.cc  backtrack_nl.cc  backtrack_sbj.cc  bdd2smurf.cc  bdd2specfn_and.cc  bdd2specfn_minmax.cc  bdd2specfn_xor.cc  bddwalk.cc  brancher.cc  bt_lemmas.cc  bt_misc.cc  bt_smurfs.cc  bt_specfn.cc  bt_specfn_and.cc  bt_specfn_minmax.cc  bt_specfn_xor.cc  crtwin.cc  display.cc  display_sf.cc  graphs.cc  heur_choice.cc  heur_stack.cc  heuristic.cc  i_heuristic.cc  init_solver.cc  interface.cc  j_heuristic.cc  j_smurf.cc  j_specfn.cc  j_specfn_and.cc  j_specfn_minmax.cc  j_specfn_xor.cc  j_update_heu.cc  ksolve.cc  l_heuristic.cc  l_lemma.cc  lemmacache.cc  (+24 more)
src/utils/: Makefile.am  Makefile.in  bdd.cc  bdd_circuit_init.cc  bdd_ite.cc  bdd_print.cc  bddidx.cc  bddidx_orig.cc  bddidx_vsb.cc  bddtable.cc  custprint.cc  infer.cc  integerset.cc  intnode.cc  itetable.cc  java_wrapper.cc  literalset.cc  llist.cc  log.cc  params.cc  params_fn.cc  queue.cc  smurfaddons.cc  symtable.cc  termcap.cc  utils.cc  vars.cc  zread.cc
tests/longer_tests/: 12.trace.gz.params  4.trace.gz.params  Makefile.am  Makefile.in  barrel.6.prove  barrel.6.prove.params  barrel.7.prove  barrel.7.prove.params  dlx2_cc.trace  dlx2_cc.trace.Hb.params  dlx2_cc.trace.Hjl.params  dlx2_cc.trace.Hl.params  dlx2_cc.trace.Hv.params  dlx2_cc.trace.params  dlx2_cc_bug11.trace  dlx2_cc_bug11.trace.Hb.params  dlx2_cc_bug11.trace.Hjl.params  dlx2_cc_bug11.trace.Hl.params  dlx2_cc_bug11.trace.Hv.params  dlx2_cc_bug11.trace.params  longmult20.cnf  queue.14.prove  queue.14.prove.Hb.params  queue.14.prove.Hjl.params  queue.14.prove.Hjq.params  queue.14.prove.Hl.params  queue.14.prove.Hv.params  queue.14.prove.params  queue.8.prove  queue.8.prove.Hb.params  queue.8.prove.Hjl.params  queue.8.prove.Hjq.params  queue.8.prove.Hl.params  queue.8.prove.Hv.params  queue.8.prove.params  slider_80_sat.ite  slider_80_sat.ite.Hjq.params  slider_80_sat.ite.params  slider_80_sat.ite.simple.params  slider_80_unsat.ite  (+3 more)
tests/trace_tests/: Makefile.am  Makefile.in  and+_example.trace  and-_example.trace  and1=_example.trace  and=_example.trace  are_equal_example.trace  are_equal_example.trace.params  ite_example.trace  limp=_example.trace  lnimp=_example.trace.params  lnimp_equ_example.trace  nand=_example.trace  new_int_leaf.trace  new_int_leaf.trace.params  nor=_example.trace  or-_example.trace  or=_example.trace  rimp=_example.trace  rnimp=_example.trace  xnor=_example.trace  xor=_example.trace
(+568 files in other folders)
