EXTRA_DIST=\
	common.h globals.h ite.h prototypes.h defines.h brancher.h \
	heuristic.h j_heuristic.h l_heuristic.h i_heuristic.h  \
	lemmainfo.h smurffactory.h \
	log.h params.h equivclass.h \
	preprocess.h pools.h symtable.h solver.h params.h vars.h \
        iteheaders.h itefeatures.h postproc.h formats.h  \
        interface.h config.h config.h.in stamp-h stamp-h.in 
