EXTRA_DIST=\
	common.h prototypes.h bdd_ite.h bddtable.h config.h config.h.in \
	equivclass.h log.h Makefile params.h sat_server_ServerImpl.h \
	sbsat_features.h sbsat_formats.h sbsat.h sbsat_headers.h \
	sbsat_interface.h sbsat_postproc.h sbsat_preproc.h sbsat_solver.h \
	sbsat_utils.h sbsat_vars.h stamp-h stamp-h.in symtable.h bddnode.h \
   cuddObj.hh




